--- a/.github/workflows/deploy-on-commit.yml
+++ b/.github/workflows/deploy-on-commit.yml
@@ -26,14 +26,16 @@ jobs:
           yarn install
           yarn build
           yarn test
-      - id: actual-deploy
-        uses: google-github-actions/deploy-cloud-functions@v0.2.0
+      - name: Set up Cloud SDK
+        uses: google-github-actions/setup-gcloud@master
         with:
-          name: example-easypost-webhook-processor
-          runtime: nodejs10
-          credentials: ${{ secrets.GCP_SA_KEY }}
-          entry_point: easypostProcessor
-          timeout: 240
+          project_id: ${{ secrets.GCP_PROJECT_ID }}
+          service_account_key: ${{ secrets.GCP_SA_KEY }}
+          export_default_credentials: true
+      - name: Deploy function webhook handler
+        run: gcloud functions deploy example-easypost-webhook-handler --runtime nodejs10 --trigger-http  --entry-point webhookHandler --timeout 240 --set-env-vars CLOUD_SQL_CONNECTION_NAME=${{ secrets.CLOUD_SQL_CONNECTION_NAME }},DB_NAME=${{ secrets.DB_NAME }},DB_USER=${{ secrets.DB_USER }},WEBHOOK_FUNCTION_URL_EASYPOST=https://us-central1-${{ secrets.GCP_PROJECT_ID }}.cloudfunctions.net/example-easypost-webhook-processor,WEBHOOK_INCOMING_QUEUE_NAME=example-incoming-webhook-queue
+      - name: Deploy function easypost webhook processor
+        run: gcloud functions deploy example-easypost-webhook-processor --runtime nodejs10 --trigger-http  --entry-point easypostProcessor --timeout 240 --set-env-vars CLOUD_SQL_CONNECTION_NAME=${{ secrets.CLOUD_SQL_CONNECTION_NAME }},DB_NAME=${{ secrets.DB_NAME }},DB_USER=${{ secrets.DB_USER }}
       - name: Output completion
         run: |
           echo Deploy completed
